# multipy

./: README.md  pyproject.toml
multipy_client/: README.md  pyproject.toml
multipy_client/multipy_client/: __main__.py  client.py
multipy_common/: README.md  pyproject.toml
multipy_common/multipy_common/: __init__.py  convert.py  data.py
multipy_common/tests/: test_convert.py  test_get_data.py
multipy_server/: README.md  pyproject.toml
multipy_server/multipy_server/: __main__.py  server.py
